# comp_pg

./: .atcodertools.toml  .gitignore  README.md  compile_flags.txt  config.json  cpp_snippets.json  package-lock.json  package.json  pyproject.toml
abc017/A/: main.cpp
abc017/B/: main  main.cpp
abc017/C/: main.cpp
abc017/D/: main.cpp
abc019/A/: main.cpp  main.cpp.1
abc019/B/: main  main.cpp  main.cpp.1
abc037/d/: main.cpp
abc040/c/: main.cpp
abc049/C-Daydream/: Cargo.toml
abc051/B-Sum_of_Three_Integers/: Cargo.toml
abc061/C-Many_Formulas/: Cargo.toml
abc079/C-Train_Ticket/: Cargo.toml
abc081/A-Placing_Marbles/: Cargo.toml
abc081/B-Shift_Only/: Cargo.toml
abc083/B-Some_Sums/: Cargo.toml
abc085/B-Kagami_Mochi/: Cargo.toml
abc085/C-Otoshidama/: Cargo.toml
abc086/A-Product/: Cargo.toml
abc086/C-Traveling/: Cargo.toml
abc087/B-Coins/: Cargo.toml
abc088/B-Card_Game_for_Two/: Cargo.toml
abc096/A/: main.cpp.1
abc096/B/: main.cpp
abc096/C/: main  main.cpp  main.cpp.1
abc099/c/: main.cpp
abc104/C-All_Green/: Cargo.toml
abc124/A/: main.cpp
abc124/B/: main.cpp
abc124/D/: main.cpp
abc126/A/: a.out  (+1 more)
abc144/: abc144_b  abc144_b.cpp
abc146/: abc146_b  abc146_b.cpp
abc151/: abc151_b  abc151_b.cpp
abc152/: abc152_b  abc152_b.cpp
abc154/: abc154_b  abc154_b.cpp
abc155/: abc155_a  abc155_a.cpp  abc155_b  abc155_b.cpp  abc155_c  abc155_c.cpp  abc155_d  abc155_d.cpp
info-semi/: a.out  in  in copy  main.cpp  test
template/: attool_cpp_temp  attool_cpp_temp.cpp  attool_cpp_temp1  cftool_cpp_temp.cpp  input_macro.rs  main.cpp
(+779 files in other folders)
