[tool.poetry]
name = "comp_pg"
version = "0.1.0"
description = ""
authors = ["Hiroya-W <hyuyukun@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
online-judge-tools = "^11.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
